# django-freeze

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  create-release.yml  test-package.yml
django_freeze.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
freeze/: TODO.txt  __init__.py  controller.py  metadata.py  parser.py  scanner.py  settings.py  sites.py  urls.py  version.py  views.py  writer.py
freeze/management/commands/: generate_static_site.py
freeze/templates/freeze/: redirect.html
freeze/templates/freeze/js/: local_urls.js
tests/: settings.py  test_imports.py  test_management_command.py  test_metadata.py  test_parser.py  test_scanner.py  test_settings.py  test_sites.py  test_urls.py  test_views.py  test_writer.py  urls.py
