[metadata]
name = django-freeze
version = attr: freeze.metadata.__version__
author = attr: freeze.metadata.__author__
author_email = attr: freeze.metadata.__email__
maintainer = attr: freeze.metadata.__author__
maintainer_email = attr: freeze.metadata.__email__
description = attr: freeze.metadata.__description__
keywords =
    django
    freeze
    static
    site
    generator
    generate
    convert
    export
    download
    zip
url = https://github.com/fabiocaccamo/%(name)s
download_url = https://github.com/fabiocaccamo/%(name)s/releases
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
requires = django (>= 3.0)
project_urls =
    Documentation = https://github.com/fabiocaccamo/%(name)s#readme
    Issues = https://github.com/fabiocaccamo/%(name)s/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    beautifulsoup4 >= 4.11.1
    requests >= 2.28.1
    xmltodict >= 0.13.0
include_package_data = True

[options.packages.find]
exclude =
    docs*
    images*
    scripts*
    tests*

[flake8]
ignore = W503
max-line-length = 88
max-complexity = 20
select = B,C,E,F,W,T4,B9
